--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div>hello world</div>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>UI</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/main.js"></script>
+</head>
+<body>
+  <div class="wrap">
+    <section class="left_box">
+      <div class="nav_wrap">
+        <div class="inner">
+          <h2 class="title">Component</h2>
+            <ul class="list">
+              <li><span>Alert</span></li>
+              <li data-cont="Component-0002.html"><span>Button</span></li>
+              <li data-cont="Component-0003.html"><span>Checkbox</span></li>
+              <li data-cont="Component-0001.html"><span>Input</span></li>
+              <li><span>List</span></li>
+              <li><span>Modal</span></li>
+              <li><span>Popup</span></li>
+              <li><span>Progress</span></li>
+              <li><span>Spinner</span></li>
+              <li><span>Table</span></li>
+              <li><span>Toast</span></li>
+              <li><span>Tooltip</span></li>
+            </ul>
+        </div>
+      </div>
+      <div class="nav_wrap">
+        <div class="inner">
+          <h2 class="title">Layout</h2>
+          <ul class="list">
+            <li><span>Flex</span></li>
+            <li><span>Column</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav_wrap">
+        <div class="inner">
+          <h2 class="title">Mixed</h2>
+          <ul class="list">
+            <li><span>Dropdown</span></li>
+            <li><span>ButtonGroup</span></li>
+            <li><span>InputGroup</span></li>
+            <li><span>Pagination</span></li>
+            <li><span>Selector</span></li>
+            <li><span>AutoComplete</span></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="right_box">
+      <div class="cont_wrap">
+        <iframe src="landing_page.html" frameborder="0" id="cont_frame"></iframe>
+      </div>
+    </section>
+  </div>
+</body>
 </html>
