--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UI</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script defer src="js/main.js"></script>
 </head>
@@ -16,11 +17,13 @@
           <h2 class="title">Component</h2>
             <ul class="list">
               <li><span>Alert</span></li>
-              <li data-cont="Component-0002.html"><span>Button</span></li>
-              <li data-cont="Component-0003.html"><span>Checkbox</span></li>
-              <li data-cont="Component-0001.html"><span>Input</span></li>
+              <li data-cont="button.html"><span>Button</span></li>
+              <li data-cont="card.html"><span>Card</span></li>
+              <li data-cont="checkbox.html"><span>Checkbox</span></li>
+              <li data-cont="comfirm.html"><span>Comfirm</span></li>
+              <li data-cont="input.html"><span>Input</span></li>
               <li><span>List</span></li>
-              <li><span>Modal</span></li>
+              <li data-cont="modal.html"><span>Modal</span></li>
               <li><span>Popup</span></li>
               <li><span>Progress</span></li>
               <li><span>Spinner</span></li>
@@ -51,6 +54,13 @@
             <li><span>AutoComplete</span></li>
           </ul>
         </div>
+      </div>
+      <div class="icon_menu">
+        <ul class="list">
+          <li data-cont="landing_page.html">
+            <span class="material-icons">home</span>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="right_box">
