--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="inner">
           <h2 class="title">Component</h2>
             <ul class="list">
-              <li><span>Alert</span></li>
+              <li data-cont="alert.html"><span>Alert</span></li>
               <li data-cont="button.html"><span>Button</span></li>
               <li data-cont="card.html"><span>Card</span></li>
               <li data-cont="checkbox.html"><span>Checkbox</span></li>
@@ -25,7 +25,8 @@
               <li><span>List</span></li>
               <li data-cont="modal.html"><span>Modal</span></li>
               <li><span>Popup</span></li>
-              <li><span>Progress</span></li>
+              <li data-cont="progress.html"><span>Progress</span></li>
+              <li data-cont="selector.html"><span>Selector</span></li>
               <li><span>Spinner</span></li>
               <li><span>Table</span></li>
               <li><span>Toast</span></li>
