--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>UI</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/main.js"></script>
+  <!-- <script defer src="js/main.js"></script> -->
 </head>
 <body>
   <div class="wrap">
@@ -71,4 +71,24 @@
     </section>
   </div>
 </body>
+<script>
+  let li = document.querySelectorAll(".list > li");
+let frame = document.getElementById("cont_frame");
+
+li.forEach(function(el){
+  el.addEventListener('click', function() {
+    const _src = this.getAttribute('data-cont');
+    frame.src = _src;    
+    removeOn();
+    el.classList.add("on");
+  })
+})
+function removeOn() {
+  li.forEach(function (el) {
+    if (el.classList.contains("on")) {
+      el.classList.remove("on")
+    }
+  })
+}
+</script>
 </html>
