--- a/card.html
+++ b/card.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Card</title>
   <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/main.js"></script>
+  <!-- <script defer src="js/main.js"></script> -->
 </head>
 <body>
   <div class="content_wrap">
@@ -56,4 +56,23 @@
     </div>
   </div>
 </body>
+<script>
+  const tabBtn1 = document.querySelector('.tab1');
+const tabBtn2 = document.querySelector('.tab2');
+const tabCont1 = document.querySelector('.cont1')
+const tabCont2 = document.querySelector('.cont2')
+
+function tabMenu1() {
+  tabBtn1.classList.add('active')
+  tabBtn2.classList.remove('active')
+  tabCont1.style.display = "block";
+  tabCont2.style.display = "none";
+}
+function tabMenu2() {
+  tabBtn2.classList.add('active')
+  tabBtn1.classList.remove('active')
+  tabCont2.style.display = "block";
+  tabCont1.style.display = "none";
+}
+</script>
 </html>
