--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
               <li><span>Popup</span></li>
               <li data-cont="progress.html"><span>Progress</span></li>
               <li data-cont="selector.html"><span>Selector</span></li>
-              <li><span>Spinner</span></li>
-              <li><span>Table</span></li>
+              <li data-cont="table.html"><span>Table</span></li>
               <li><span>Toast</span></li>
               <li><span>Tooltip</span></li>
             </ul>
