--- a/modal.html
+++ b/modal.html
@@ -14,9 +14,10 @@
     <div class="center shadow_box">
       <h1 class="title">Modal</h1>
       <div class="content_box">
-        <button class="button btn">OPEN</button>
+        <button class="button">OPEN</button>
       </div>
       <div class="modal_wrap" id="myModal">
+        <div class="background"></div>
         <div class="modal">
           <div class="modal_top">
             <h2 class="title">Title</h2>
@@ -43,44 +44,12 @@
   </div>
 </body>
 <script>
-// let modal = document.querySelector('.modal')
-// let back = document.getElementById("myModal");
-// let _open = document.querySelector('.btn')
-// let _close = document.querySelector('.close');
-
-// _open.onclick = function() {
-//   open();
-// }
-// _close.onclick = function() {
-//   close();
-// }
-
-// window.onclick = function(ev) {
-//   if(ev.target == back) {
-//     close();
-//   }
-// }
-// function open(){
-//   modal.classList.add('fade');
-//   back.classList.add('show');
-// }
-// function close() {
-//   modal.classList.remove('fade');
-//   back.classList.remove('show');
-// }
-
-// document.addEventListener('mouseup', function (el) {
-//   console.log(el.target)
-//   if(el.target !== modal) {
-//     close()
-//   }
-// })
-
 window.onload = function () {
-    const button = document.querySelector("#open-modal")
+    const button = document.querySelector(".button")
     const modal = document.querySelector(".modal")
-    const modalBackground = document.querySelector(".modal .background")
-    const modalCloseButton = document.querySelector(".modal .modal-close-button")
+    const modalBox = document.querySelector("#myModal")
+    const modalBackground = document.querySelector(".background")
+    const modalCloseButton = document.querySelector(".close")
     button.addEventListener("click", toggle)
     modalBackground.addEventListener("click", toggle)
     modalCloseButton.addEventListener("click", toggle)
@@ -88,8 +57,10 @@ window.onload = function () {
     function toggle () {
         if (modal.classList.contains("on")) {
             modal.classList.remove("on")
+            modalBox.classList.remove("on")
         } else {
             modal.classList.add("on")
+            modalBox.classList.add("on")
         }
     }   
 }
