--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Table</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <!-- <script defer src="js/main.js"></script> -->
 </head>
@@ -14,7 +14,7 @@
     <div class="center shadow_box">
       <h1 class="title">Table</h1>
       <div class="content_box table_wrap">
-        <table>
+        <table class="table_wrap">
           <colgroup>
             <col width="20%">
             <col width="15%">
@@ -31,22 +31,69 @@
           </thead>
           <tbody>
             <tr>
-              <td>홍길동</td>
-              <td>남</td>
-              <td>23세</td>
-              <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
-            </tr>
-            <tr>
-              <td>임꺽정</td>
-              <td>남</td>
-              <td>32세</td>
-              <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
-            </tr>
-            <tr>
-              <td>유관순</td>
-              <td>여</td>
-              <td>18세</td>
-              <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+              <td colspan="4" >
+                <div class="scoll_t">
+                  <table>
+                    <colgroup>
+                      <col width="20%">
+                      <col width="15%">
+                      <col width="15%">
+                      <col width="50%">
+                  </colgroup>
+                  <tbody>
+                    <tr>
+                      <td>홍길동</td>
+                      <td>남</td>
+                      <td>23세</td>
+                      <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+                    </tr>
+                    <tr>
+                      <td>임꺽정</td>
+                      <td>남</td>
+                      <td>32세</td>
+                      <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+                    </tr>
+                    <tr>
+                      <td>유관순</td>
+                      <td>여</td>
+                      <td>18세</td>
+                      <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+                    </tr>
+                    <tr>
+                      <td>유관순</td>
+                      <td>여</td>
+                      <td>18세</td>
+                      <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+                    </tr>
+                    <tr>
+                      <td>유관순</td>
+                      <td>여</td>
+                      <td>18세</td>
+                      <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+                    </tr>
+                    <tr>
+                      <td>유관순</td>
+                      <td>여</td>
+                      <td>18세</td>
+                      <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+                    </tr>
+                    <tr>
+                      <td>유관순</td>
+                      <td>여</td>
+                      <td>18세</td>
+                      <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+                    </tr>
+                    <tr>
+                      <td>유관순</td>
+                      <td>여</td>
+                      <td>18세</td>
+                      <td>서울시 강남구 ㅇㅇㅇ ㅇㅇㅇㅇ 320</td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+              </td>
+              
             </tr>
         </table>
       </div>
