--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li data-cont="button.html"><span>Button</span></li>
               <li data-cont="card.html"><span>Card</span></li>
               <li data-cont="checkbox.html"><span>Checkbox</span></li>
-              <li data-cont="comfirm.html"><span>Comfirm</span></li>
+              <li data-cont="confirm.html"><span>Confirm</span></li>
               <li data-cont="input.html"><span>Input</span></li>
               <li><span>List</span></li>
               <li data-cont="modal.html"><span>Modal</span></li>
