--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <li><span>List</span></li>
               <li data-cont="modal.html"><span>Modal</span></li>
               <li><span>Popup</span></li>
+              <li data-cont="pagination.html"><span>Pagination</span></li>
               <li data-cont="progress.html"><span>Progress</span></li>
               <li data-cont="selector.html"><span>Selector</span></li>
               <li data-cont="table.html"><span>Table</span></li>
