--- a/selector.html
+++ b/selector.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Selector</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
   <link rel="stylesheet" href="css/style.css">
   <!-- <script defer src="js/main.js"></script> -->
 
@@ -19,7 +19,7 @@
           <h2>default</h2>
           <div class="select_btn">
             <input type="text" value="dropbox" class="button" readonly>
-            <span class="arrow"><i class="fa fa-angle-down"></i></span>
+            <span class="arrow"><i class="fas fa-chevron-down"></i></span>
             <ul class="dropdown">
               <li class="option 1">Apple</li>
               <li class="option 2">Banana</li>
