--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
               <li data-cont="checkbox.html"><span>Checkbox</span></li>
               <li data-cont="confirm.html"><span>Confirm</span></li>
               <li data-cont="input.html"><span>Input</span></li>
-              <li><span>List</span></li>
+              <li data-cont="under_construction.html"><span>List</span></li>
               <li data-cont="modal.html"><span>Modal</span></li>
-              <li><span>Popup</span></li>
+              <li data-cont="under_construction.html"><span>Popup</span></li>
               <li data-cont="pagination.html"><span>Pagination</span></li>
               <li data-cont="progress.html"><span>Progress</span></li>
               <li data-cont="selector.html"><span>Selector</span></li>
               <li data-cont="table.html"><span>Table</span></li>
-              <li><span>Toast</span></li>
-              <li><span>Tooltip</span></li>
+              <li data-cont="under_construction.html"><span>Toast</span></li>
+              <li data-cont="under_construction.html"><span>Tooltip</span></li>
             </ul>
         </div>
       </div>
@@ -38,8 +38,8 @@
         <div class="inner">
           <h2 class="title">Layout</h2>
           <ul class="list">
-            <li><span>Flex</span></li>
-            <li><span>Column</span></li>
+            <li data-cont="under_construction.html"><span>Flex</span></li>
+            <li data-cont="under_construction.html"><span>Column</span></li>
           </ul>
         </div>
       </div>
@@ -47,12 +47,12 @@
         <div class="inner">
           <h2 class="title">Mixed</h2>
           <ul class="list">
-            <li><span>Dropdown</span></li>
-            <li><span>ButtonGroup</span></li>
-            <li><span>InputGroup</span></li>
-            <li><span>Pagination</span></li>
-            <li><span>Selector</span></li>
-            <li><span>AutoComplete</span></li>
+            <li data-cont="under_construction.html"><span>Dropdown</span></li>
+            <li data-cont="under_construction.html"><span>ButtonGroup</span></li>
+            <li data-cont="under_construction.html"><span>InputGroup</span></li>
+            <li data-cont="under_construction.html"><span>Pagination</span></li>
+            <li data-cont="under_construction.html"><span>Selector</span></li>
+            <li data-cont="under_construction.html"><span>AutoComplete</span></li>
           </ul>
         </div>
       </div>
