--- a/pagination.html
+++ b/pagination.html
@@ -27,4 +27,10 @@
         </div>
       </body>
 </body>
+<script>
+  const tCount = 100;
+  let page = 1
+  const limit = 30
+  const block = 10
+</script>
 </html>
